--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
-<resources>
+ <resources>
     <string name="app_name">I Am Poor</string>
-</resources>
+     <string name="textview">TextView</string>
+     <string name="I_am_Poor">I AM POOR</string>
+     <string name="i_am_poor">I am Poor</string>
+ </resources>
